; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/nvram/extr_bhnd_nvram_plist.c_bhnd_nvram_prop_bytes_new.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/nvram/extr_bhnd_nvram_plist.c_bhnd_nvram_prop_bytes_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BHND_NVRAM_VAL_DYNAMIC = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [47 x i8] c"invalid input data; initialization failed: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @bhnd_nvram_prop_bytes_new(i8* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = load i8*, i8** %7, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* @BHND_NVRAM_VAL_DYNAMIC, align 4
  %17 = call i32 @bhnd_nvram_val_new(i32** %11, i32* null, i8* %13, i64 %14, i32 %15, i32 %16)
  store i32 %17, i32* %12, align 4
  %18 = load i32, i32* %12, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %4
  %21 = load i32, i32* %12, align 4
  %22 = load i32, i32* @ENOMEM, align 4
  %23 = icmp ne i32 %21, %22
  br i1 %23, label %24, label %27

24:                                               ; preds = %20
  %25 = load i32, i32* %12, align 4
  %26 = call i32 @BHND_NV_LOG(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i32 %25)
  br label %27

27:                                               ; preds = %24, %20
  store i32* null, i32** %5, align 8
  br label %35

28:                                               ; preds = %4
  %29 = load i8*, i8** %6, align 8
  %30 = load i32*, i32** %11, align 8
  %31 = call i32* @bhnd_nvram_prop_new(i8* %29, i32* %30)
  store i32* %31, i32** %10, align 8
  %32 = load i32*, i32** %11, align 8
  %33 = call i32 @bhnd_nvram_val_release(i32* %32)
  %34 = load i32*, i32** %10, align 8
  store i32* %34, i32** %5, align 8
  br label %35

35:                                               ; preds = %28, %27
  %36 = load i32*, i32** %5, align 8
  ret i32* %36
}

declare dso_local i32 @bhnd_nvram_val_new(i32**, i32*, i8*, i64, i32, i32) #1

declare dso_local i32 @BHND_NV_LOG(i8*, i32) #1

declare dso_local i32* @bhnd_nvram_prop_new(i8*, i32*) #1

declare dso_local i32 @bhnd_nvram_val_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
